# hostlet-core

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  AGENTS.md  CLOUD_MIGRATION.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION-0.4.1.md  LICENSE  README.md  ROADMAP-0.4.1-0.8.0.md  package.json
.github/: actionlint.yaml
apps/agent/: Cargo.toml  Dockerfile
apps/agent/src/: build.rs  compose.rs  git.rs  journal.rs  main.rs  main_part1.rs  main_part2.rs  main_part3.rs  main_part4.rs  main_part5.rs  ops.rs  railpack.rs  runtime.rs  validation.rs
apps/agent/src/compose/: cleanup.rs  tests.rs
apps/agent/src/ops/: activation.rs  capture_url.rs  health.rs  reconcile.rs  resource_stats.rs  screenshot_tests.rs  status_tests.rs  storage_stats.rs
apps/agent/src/runtime/: pipeline.rs
apps/agent/src/runtime/pipeline/: generated_topology.rs
apps/agent/src/runtime/pipeline/generated_topology/: tests.rs
apps/agent/src/validation/: docker_resources.rs  redaction.rs  tests.rs
apps/api/: Cargo.toml  Dockerfile
apps/api/migrations/: 001_init.sql  002_local_server.sql  003_app_build_settings.sql  004_app_resource_limits.sql  005_control_plane_password.sql  006_security_hardening.sql  007_public_exposure.sql  008_backfill_public_exposure.sql  009_app_resource_snapshots.sql  010_auto_deploy_and_webhooks.sql  011_deploy_locks_and_agent_jobs.sql  012_agent_jobs_app_id.sql  013_per_server_job_signing.sql  014_app_public_dns_records.sql  015_app_env_vars_updated_at.sql  016_runtime_health.sql  017_durable_agent_jobs.sql  018_audit_events.sql  019_compose_runtime.sql  020_runtime_config.sql  021_cloud_accounts.sql  022_simple_cloud_app_limits.sql  023_packaging_strategy.sql  025_app_screenshots.sql  026_resource_snapshot_numeric_metrics.sql  027_server_capacity.sql  030_compose_service_status.sql  032_app_storage_usage.sql  035_app_storage_footprint.sql  040_apps_suspended_at.sql  049_apps_queue_priority_offset.sql  052_crash_safe_deployments.sql  053_agent_protocol_version.sql  054_browser_health.sql  README.md
apps/api/src/: agent.rs  agent_part1.rs  agent_part2.rs  agent_part3.rs  apps.rs  auth.rs  browser_health.rs  cleanup.rs  crypto.rs  deploy.rs  deployment_execution.rs  deployment_policy.rs  device_flow.rs  env.rs  github.rs  github_app.rs  health_alerts.rs  job_control.rs  lib.rs  main.rs  operator.rs  password.rs  policies.rs  rate_limit.rs  runtime_recovery.rs  screenshots.rs  serialization.rs  server_capacity.rs  state.rs  storage.rs  update_checks.rs  web.rs  web_part1.rs  web_part2.rs  web_part3.rs  web_part4.rs  web_part5.rs
apps/api/src/agent/: auth.rs  messages.rs  mod.rs  routes.rs  socket.rs  tests.rs  validation.rs
apps/api/src/agent/tests/: health.rs  lifecycle.rs  mod.rs  priority.rs  resource.rs  storage.rs
apps/api/src/apps/: serialization.rs
apps/api/src/auth/: device_flow.rs  password.rs
apps/api/src/cleanup/: tests.rs
apps/api/src/deploy/: deploy_app.rs  recovery.rs  tests.rs
apps/api/src/github/: access_token.rs  inference.rs  inspection.rs  tests.rs
apps/api/src/screenshots/: recapture.rs  storage.rs  tests.rs
apps/api/src/web/: app_delete.rs  app_env.rs  apps.rs  audit.rs  cleanup.rs  health.rs  jobs.rs  mod.rs  servers.rs  system.rs  validation.rs
apps/api/src/web/apps/: addons.rs  create.rs  queries.rs  request_auth.rs  update.rs
apps/api/src/web/dns/: cloudflare.rs
apps/api/src/web/validation/: serialization.rs
apps/cli/: Cargo.toml
apps/cli/src/: backups.rs  cloudflare.rs  compose.rs  doctor.rs  main.rs  main_part1.rs  main_part2.rs  main_part3.rs  runtime.rs  update.rs  util.rs
apps/cli/src/update/: release.rs  state.rs
docs/: ARCHITECTURE.md  CLOUD_BRANCH_UPDATE_0.4.0.md  DEPLOYING_APPS.md  FEATURE_GAPS.md  PLAN_0.2.0.md  PLAN_0.3.0.md  PLAN_0.4.0_FINAL_POLISH.md  PLAN_0.4.0_HYBRID_CLOUD.md  PLAN_AUTONOMOUS_0.1.0.md  PLAN_OWNER_INPUT_0.1.0.md  README.md  RELEASE_0.1.0_REVIEW.md  RELEASE_0.2.0.md  RELEASE_0.3.0.md  RELEASE_0.3.1.md  RELEASE_0.3.10.md  RELEASE_0.3.11.md  RELEASE_0.3.2.md  RELEASE_0.3.3.md  RELEASE_0.3.4.md  RELEASE_0.3.5.md  RELEASE_0.3.6.md  RELEASE_0.3.7.md  RELEASE_0.3.8.md  RELEASE_0.3.9.md  RELEASE_0.4.0.md  SECURITY.md  SECURITY_OWNERSHIP_0.4.0.md  SHIP_PLAN_0.1.0.md  THREAT_MODEL_0.4.0.md  UNIFIED_RELEASE_PACKAGING_PLAN.md  VALIDATION_0.2.0.md  VALIDATION_0.3.0.md  VALIDATION_0.3.10.md  VALIDATION_0.3.11.md  VALIDATION_0.3.8.md  VALIDATION_0.3.9.md  VALIDATION_0.4.0.md  architecture.md  contributing.md  (+11 more)
infra/: Caddyfile.direct  Caddyfile.lan  Caddyfile.tunnel  docker-compose.prod.yml  docker-compose.yml
scripts/: backup.sh  check-line-cap-selftest.sh  check-line-cap.sh  check-migration-versions.sh  (+22 more)
(+183 files in other folders)
