[package]
name = "hostlet-agent"
version = "0.5.1"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures-util.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
http = "1"
