[package]
name = "hostlet-agent"
version = "0.2.15"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
futures-util.workspace = true
hostlet-contracts = { path = "../../crates/contracts" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
http = "1"
