[package]
name = "hostlet-api"
version = "0.2.6"
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
hmac.workspace = true
hostlet-contracts = { path = "../../crates/contracts" }
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
aes-gcm.workspace = true
rand.workspace = true
url.workspace = true

[dev-dependencies]
hex = "0.4"
