[package]
name = "hostlet"
version = "0.2.9"
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
dialoguer.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
url.workspace = true
